--- a/src/components/SignUpForm/SignUpForm.css
+++ b/src/components/SignUpForm/SignUpForm.css
@@ -6,14 +6,22 @@
     font-style: normal;
 }
 
+body {
+    background-image: url('../../Pictures/paper-background.jpg');
+    background-position: center;
+    background-position-x: 25%;
+    background-position-y: 2%;
+}
+
 .start-button {
-    margin-top: 2.5%;
+    margin-top: 1.5%;
     border-radius: 10px;
     font-size: 30px;
     font-family: "cf_crayonsregular", fallback, sans-serif;
     background-color: #f55440;
     box-shadow: 2px 3px #222222;
     padding-left: 40px;
+    margin-right: 1.5%;
   }
 
   input {
@@ -31,19 +39,19 @@
   }
 
   p {
-      margin-top: 9%;
+      margin-top: 5%;
       font-size: 22px;
+      margin-right: 1.2%;
   }
 
   .error {
       margin-bottom: 2%;
-      margin-top: -2%;
       font-size: 18px;
       padding: 0px 15px
   }
 
   .greeting {
-      margin-bottom: -10%;
+      margin-bottom: -3%;
       font-size: 22px;
   }
 
